Hide scrollbars and fix gap in Safari

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -17,3 +17,14 @@
     content: none;
   }
 }
+
+/* https://github.com/tailwindlabs/tailwindcss/discussions/2394 */
+/* Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
